It's friday bitch

--- a/app/templates/classsetup.html
+++ b/app/templates/classsetup.html
@@ -10,8 +10,7 @@
     <body>
         <nav class="grey darken-4"> 
             <div class="nav-wrapper">
-            <span class="brand-logo center">Yet Another Grade Manager</span>
-              <a href="#" class="brand-logo right">Logo</a>
+            <span class="brand-logo center">Yet another grade manager</span>
               <ul id="nav-mobile" class="left hide-on-med-and-down">
                 <li><a href="/logout">Logout</a></li>
               </ul>
@@ -31,7 +30,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="right">
+                        <div class="left">
                             <button class="btn white black-text">Submit class name</button>
                         </div>
                     </div>
@@ -40,6 +39,21 @@
               </div>
             </div>
           </div>
+          <footer class="page-footer grey darken-4" style="position:fixed;bottom:0;left:0;width:100%;">
+            <div class="container">
+                <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Yet another grade manager</h5>
+                    <p class="grey-text text-lighten-4">Thank you for using our amazing grade manager. Enjoy the journey.</p>
+                </div>
+                </div>
+            </div>
+            <div class="footer-copyright">
+                <div class="container">
+                © 2022 Volery & Ingold IT-Solutions
+                </div>
+            </div>
+        </footer>
     </body>
     <script>
     </script>
