--- a/app/templates/enterclass.html
+++ b/app/templates/enterclass.html
@@ -13,8 +13,7 @@
               <ul id="nav-mobile" class="left hide-on-med-and-down">
                 <li><a href="/logout">Logout</a></li>
               </ul>
-              <span class="brand-logo center">Yoooo enter your key!</span>
-              <a href="#" class="brand-logo right">Logo</a>
+              <span class="brand-logo center">Yet another grade manager</span>
             </div>
         </nav>
         <div class="container">
@@ -45,6 +44,21 @@
               </div>
             </div>
         </div>
+        <footer class="page-footer grey darken-4" style="position:fixed;bottom:0;left:0;width:100%;">
+            <div class="container">
+                <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Yet another grade manager</h5>
+                    <p class="grey-text text-lighten-4">Thank you for using our amazing grade manager. Enjoy the journey.</p>
+                </div>
+                </div>
+            </div>
+            <div class="footer-copyright">
+                <div class="container">
+                © 2022 Volery & Ingold IT-Solutions
+                </div>
+            </div>
+        </footer>
     </body>
     <script>
     </script>
