--- a/app/templates/grades.html
+++ b/app/templates/grades.html
@@ -15,9 +15,10 @@
               <ul id="nav-mobile" class="left hide-on-med-and-down">
                 <li><a href="/logout">Logout</a></li>
                 <li><a href="/profile">Profile</a></li>
+                <li><a href="/grades/submit">Add new grade</a></li>
+                <li><a href="/absences/submit">Add new absence</a></li>
               </ul>
               <span class="brand-logo center">Yet another grade manager</span>
-              <a href="#" class="brand-logo right">Logo</a>
             </div>
         </nav>
         <div class="container">
@@ -45,6 +46,21 @@
                 </div>
               </div>
         </div>
+        <footer class="page-footer grey darken-4" style="position:fixed;bottom:0;left:0;width:100%;">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">Yet another grade manager</h5>
+                <p class="grey-text text-lighten-4">Thank you for using our amazing grade manager. Enjoy the journey.</p>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+            © 2022 Volery & Ingold IT-Solutions
+            </div>
+          </div>
+        </footer>
     </body>
 </html>
 
