--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -55,10 +55,10 @@
                         </label>
                     </p>
                     <div class=" card-action row">
-                        <div class="left">
+                        <div class="right">
                             <a class="blue-text" href="/login">You have alerady an account? Then go to login</a>
                         </div>
-                        <div class="right">
+                        <div class="left">
                             <button class="btn white black-text">Sign Up</button>
                         </div>
                     </div>
@@ -67,5 +67,20 @@
               </div>
             </div>
           </div>
+          <footer class="page-footer grey darken-4" style="position:fixed;bottom:0;left:0;width:100%;">
+            <div class="container">
+              <div class="row">
+                <div class="col l6 s12">
+                  <h5 class="white-text">Yet another grade manager</h5>
+                  <p class="grey-text text-lighten-4">Thank you for using our amazing grade manager. Enjoy the journey.</p>
+                </div>
+              </div>
+            </div>
+            <div class="footer-copyright">
+              <div class="container">
+              © 2022 Volery & Ingold IT-Solutions
+              </div>
+            </div>
+          </footer>
     </body>
 </html>
