--- a/app/templates/configform.html
+++ b/app/templates/configform.html
@@ -10,8 +10,7 @@
     <body>
         <nav class="grey darken-4"> 
             <div class="nav-wrapper">
-            <span class="brand-logo center">Yet Another Grade Manager</span>
-              <a href="#" class="brand-logo right">Logo</a>
+            <span class="brand-logo center">Yet another grade manager</span>
               <ul id="nav-mobile" class="left hide-on-med-and-down">
                 <li><a href="/logout">Logout</a></li>
               </ul>
@@ -19,28 +18,43 @@
         </nav>
 
         <div class="container">
-            <div class="col s12 m12">
-              <div class="card">
-                <div class="card-content">
-                  <span class="card-title center-align">Add new Config</span>
-                  <p>Your class invite key is: {{invite_key}}</p>
-                  <form method="POST" action="/manager/setup/addconfig" id="configform">
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <textarea id="config" name="config" class="materialize-textarea"></textarea>
-                            <label for="config">Config</label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="right">
-                            <button class="btn white black-text">Submit config</button>
-                        </div>
-                    </div>
-                </form>
-                </div>
+          <div class="col s12 m12">
+            <div class="card">
+              <div class="card-content">
+                <span class="card-title center-align">Add new Config</span>
+                <p>Your class invite key is: {{invite_key}}</p>
+                <form method="POST" action="/manager/setup/addconfig" id="configform">
+                  <div class="row">
+                      <div class="input-field col s12">
+                          <textarea id="config" name="config" class="materialize-textarea"></textarea>
+                          <label for="config">Config</label>
+                      </div>
+                  </div>
+                  <div class="row">
+                      <div class="left">
+                          <button class="btn white black-text">Submit config</button>
+                      </div>
+                  </div>
+              </form>
               </div>
             </div>
           </div>
+        </div>
+        <footer class="page-footer grey darken-4" style="position:fixed;bottom:0;left:0;width:100%;">
+          <div class="container">
+              <div class="row">
+              <div class="col l6 s12">
+                  <h5 class="white-text">Yet another grade manager</h5>
+                  <p class="grey-text text-lighten-4">Thank you for using our amazing grade manager. Enjoy the journey.</p>
+              </div>
+              </div>
+          </div>
+          <div class="footer-copyright">
+              <div class="container">
+              © 2022 Volery & Ingold IT-Solutions
+              </div>
+          </div>
+      </footer>
     </body>
     <script>
     </script>
