--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -61,5 +61,20 @@
               </div>
             </div>
           </div>
+          <footer class="page-footer grey darken-4" style="position:fixed;bottom:0;left:0;width:100%;">
+            <div class="container">
+              <div class="row">
+                <div class="col l6 s12">
+                  <h5 class="white-text">Yet another grade manager</h5>
+                  <p class="grey-text text-lighten-4">Thank you for using our amazing grade manager. Enjoy the journey.</p>
+                </div>
+              </div>
+            </div>
+            <div class="footer-copyright">
+              <div class="container">
+              © 2022 Volery & Ingold IT-Solutions
+              </div>
+            </div>
+          </footer>
     </body>
 </html>
