--- a/app/templates/newabsence.html
+++ b/app/templates/newabsence.html
@@ -19,31 +19,48 @@
               <span class="brand-logo center">Yet another grade manager</span>
             </div>
         </nav>
-        <div class="card">
-            <div class="card-content">
-              <span class="card-title center-align">Create new Abcence</span>
-              <form method="POST" action="/user/api/absence/submit">
+        <main class="container">
+            <div class="card">
+                <div class="card-content">
+                <span class="card-title center-align">Create new Abcence</span>
+                <form method="POST" action="/user/api/absence/submit">
 
-                <div class="input-field col s12">
-                    <select id="subject" name="subject">
-                        {% for subject in subjects %}
-                            <option value="{{subject.id}}">{{subject.name}}</option>
-                        {% endfor %}
-                    </select>
-                    <label>Choose a subject</label>
-                </div>
-                <div class="row">
                     <div class="input-field col s12">
-                        <input name="count" id="count" type="text" class="validate">
-                        <label for="count">Number of lessions</label>
+                        <select id="subject" name="subject">
+                            {% for subject in subjects %}
+                                <option value="{{subject.id}}">{{subject.name}}</option>
+                            {% endfor %}
+                        </select>
+                        <label>Choose a subject</label>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <input name="count" id="count" type="text" class="validate">
+                            <label for="count">Number of lessions</label>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="card-action align-right">
+                        <button class="btn white black-text">Submit</button>
                     </div>
                 </div>
+            </div>
+        </main>
+          <footer class="page-footer grey darken-4" style="position:fixed;bottom:0;left:0;width:100%;">
+            <div class="container">
+                <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Yet another grade manager</h5>
+                    <p class="grey-text text-lighten-4">Thank you for using our amazing grade manager. Enjoy the journey.</p>
                 </div>
-                <div class="card-action align-right">
-                    <button class="btn white black-text">Submit</button>
                 </div>
             </div>
-          </div>
+            <div class="footer-copyright">
+                <div class="container">
+                © 2022 Volery & Ingold IT-Solutions
+                </div>
+            </div>
+        </footer>
     </body>
     <script>
         $(document).ready(function(){
