--- a/app/templates/newgrade.html
+++ b/app/templates/newgrade.html
@@ -19,36 +19,52 @@
               <span class="brand-logo center">Yet another grade manager</span>
             </div>
         </nav>
-        <div class="card">
-            <div class="card-content">
-              <span class="card-title center-align">Create new Grade</span>
-              <form method="POST" action="/user/api/grade/submit">
+        <main class="container">
+            <div class="card">
+                <div class="card-content">
+                    <span class="card-title center-align">Create new Grade</span>
+                    <form method="POST" action="/user/api/grade/submit">
 
-                <div class="input-field col s12">
-                    <select id="subject" name="subject">
-                        {% for subject in subjects %}
-                            <option value="{{subject.id}}">{{subject.name}}</option>
-                        {% endfor %}
-                    </select>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input name="grade" id="grade" type="text" class="validate">
-                        <label for="grade">Your Grade</label>
+                        <div class="input-field col s12">
+                            <select id="subject" name="subject">
+                                {% for subject in subjects %}
+                                    <option value="{{subject.id}}">{{subject.name}}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <input name="grade" id="grade" type="text" class="validate">
+                                <label for="grade">Your Grade</label>
+                            </div>
+                        </div>
+                        <p>
+                            <label>
+                                <input name="remember" type="checkbox" />
+                                <span>Finals?</span>
+                            </label>
+                        </p>
                     </div>
-                </div>
-                <p>
-                    <label>
-                        <input name="remember" type="checkbox" />
-                        <span>Finals?</span>
-                    </label>
-                </p>
-                </div>
-                <div class="card-action align-right">
-                    <button class="btn white black-text">Submit</button>
+                    <div class="card-action align-right">
+                        <button class="btn white black-text">Submit</button>
                 </div>
             </div>
-          </div>
+        </main>
+        <footer class="page-footer grey darken-4" style="position:fixed;bottom:0;left:0;width:100%;">
+            <div class="container">
+                <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Yet another grade manager</h5>
+                    <p class="grey-text text-lighten-4">Thank you for using our amazing grade manager. Enjoy the journey.</p>
+                </div>
+                </div>
+            </div>
+            <div class="footer-copyright">
+                <div class="container">
+                © 2022 Volery & Ingold IT-Solutions
+                </div>
+            </div>
+        </footer>
     </body>
     <script>
         $(document).ready(function(){
