--- a/app/templates/newspecialgrade.html
+++ b/app/templates/newspecialgrade.html
@@ -20,35 +20,51 @@
               <span class="brand-logo center">Yet another grade manager</span>
             </div>
         </nav>
-    
-        <div class="card">
-            <div class="card-content">
-              <span class="card-title center-align">Create new Grade</span>
-              <form method="POST" action="/user/api/specialgrade/submit">
+        <main class="container">
+            <div class="card">
+                <div class="card-content">
+                <span class="card-title center-align">Create new Grade</span>
+                <form method="POST" action="/user/api/specialgrade/submit">
 
-                <div class="input-field col s12">
-                    {% if not tests[0] %}
-                    <span>No more grades to add <a href="/profile">Go back!</a></span>
-                    {% else %}
-                    <select id="test" name="test">
-                        {% for test in tests %}
-                            <option value="{{test.id}}">{{test.subject}}: {{test.name}}, {{test.weight}}%</option>
-                        {% endfor %}
-                    </select>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <input name="grade" id="grade" type="text" class="validate">
-                            <label for="grade">Your Grade</label>
+                    <div class="input-field col s12">
+                        {% if not tests[0] %}
+                        <span>No more grades to add <a href="/profile">Go back!</a></span>
+                        {% else %}
+                        <select id="test" name="test">
+                            {% for test in tests %}
+                                <option value="{{test.id}}">{{test.subject}}: {{test.name}}, {{test.weight}}%</option>
+                            {% endfor %}
+                        </select>
                         </div>
-                    </div>
-                    </div>
-                    <div class="card-action align-right">
-                        <button class="btn white black-text">Submit</button>
-                    </div>
-                    {% endif %}
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <input name="grade" id="grade" type="text" class="validate">
+                                <label for="grade">Your Grade</label>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="card-action align-right">
+                            <button class="btn white black-text">Submit</button>
+                        </div>
+                        {% endif %}
+                </div>
             </div>
-          </div>
+        </main>
+          <footer class="page-footer grey darken-4" style="position:fixed;bottom:0;left:0;width:100%;">
+            <div class="container">
+                <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Yet another grade manager</h5>
+                    <p class="grey-text text-lighten-4">Thank you for using our amazing grade manager. Enjoy the journey.</p>
+                </div>
+                </div>
+            </div>
+            <div class="footer-copyright">
+                <div class="container">
+                © 2022 Volery & Ingold IT-Solutions
+                </div>
+            </div>
+        </footer>
     </body>
     <script>
         $(document).ready(function(){
