--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -70,7 +70,7 @@
           </div>
 
 
-        <div class="card">
+        <div class="card" style="margin-bottom: 16em;">
           <div class="card-content">
             <span class="card-title center-align">Overview Absences</span>
               <table>
